--- a/Assembly-CSharp.Player.csproj
+++ b/Assembly-CSharp.Player.csproj
@@ -45,6 +45,7 @@
     <Analyzer Include="D:\Programs\Unity\2022.3.5f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\foursoulsauto\core\LootCardAction.cs" />
     <Compile Include="Assets\foursoulsauto\core\cardlib\Fly.cs" />
     <Compile Include="Assets\LeanTween\Examples\Scripts\GeneralCameraShake.cs" />
     <Compile Include="Assets\foursoulsauto\core\effectlib\RollCreatingEffect.cs" />
@@ -56,8 +57,8 @@
     <Compile Include="Assets\foursoulsauto\core\CardEffect.cs" />
     <Compile Include="Assets\foursoulsauto\core\ContainerType.cs" />
     <Compile Include="Assets\LeanTween\Framework\LeanTest.cs" />
-    <Compile Include="Assets\foursoulsauto\core\LootCard.cs" />
-    <Compile Include="Assets\foursoulsauto\core\effectlib\DiscardEffect.cs" />
+    <Compile Include="Assets\foursoulsauto\core\cardlib\ABomb.cs" />
+    <Compile Include="Assets\foursoulsauto\core\BoardCardList.cs" />
     <Compile Include="Assets\LeanTween\Examples\Scripts\GeneralSimpleUI.cs" />
     <Compile Include="Assets\foursoulsauto\core\VoidContainer.cs" />
     <Compile Include="Assets\LeanTween\Examples\Scripts\PathSplineEndless.cs" />
@@ -77,15 +78,16 @@
     <Compile Include="Assets\foursoulsauto\core\effectlib\EffectAppender.cs" />
     <Compile Include="Assets\foursoulsauto\core\NonAttackDieRoll.cs" />
     <Compile Include="Assets\LeanTween\Examples\Scripts\PathSpline.cs" />
+    <Compile Include="Assets\foursoulsauto\core\deck\DeckArrangement.cs" />
     <Compile Include="Assets\foursoulsauto\core\LivingCard.cs" />
+    <Compile Include="Assets\foursoulsauto\core\EffectInput.cs" />
     <Compile Include="Assets\foursoulsauto\ui\StackUI.cs" />
     <Compile Include="Assets\LeanTween\Examples\Scripts\TestingZLegacy.cs" />
-    <Compile Include="Assets\foursoulsauto\core\DeckArrangement.cs" />
+    <Compile Include="Assets\foursoulsauto\core\effectlib\LootCardPlayEffect.cs" />
     <Compile Include="Assets\LeanTween\Examples\Scripts\LogoCinematic.cs" />
-    <Compile Include="Assets\foursoulsauto\core\DeckBehaviour.cs" />
     <Compile Include="Assets\LeanTween\Examples\Scripts\GeneralAdvancedTechniques.cs" />
     <Compile Include="Assets\foursoulsauto\core\cardlib\Isaac.cs" />
-    <Compile Include="Assets\foursoulsauto\core\CardDatabase.cs" />
+    <Compile Include="Assets\foursoulsauto\core\deck\DeckBehaviour.cs" />
     <Compile Include="Assets\foursoulsauto\core\CardAction.cs" />
     <Compile Include="Assets\foursoulsauto\ui\PlayerUI.cs" />
     <Compile Include="Assets\foursoulsauto\core\GameState.cs" />
@@ -98,9 +100,9 @@
     <Compile Include="Assets\LeanTween\Examples\Scripts\GeneralEventsListeners.cs" />
     <Compile Include="Assets\foursoulsauto\core\IStackEffect.cs" />
     <Compile Include="Assets\LeanTween\Examples\Scripts\PathSpline2d.cs" />
-    <Compile Include="Assets\foursoulsauto\core\Deck.cs" />
     <Compile Include="Assets\LeanTween\Framework\LTSeq.cs" />
     <Compile Include="Assets\LeanTween\Examples\Scripts\PathBezier2d.cs" />
+    <Compile Include="Assets\foursoulsauto\core\effectlib\DealDamageEffect.cs" />
     <Compile Include="Assets\foursoulsauto\core\BoardCardContainer.cs" />
     <Compile Include="Assets\LeanTween\Examples\Scripts\PathSplinePerformance.cs" />
     <Compile Include="Assets\LeanTween\Examples\Scripts\GeneralEasingTypes.cs" />
@@ -117,8 +119,8 @@
     <Compile Include="Assets\foursoulsauto\core\GameStack.cs" />
     <Compile Include="Assets\LeanTween\Framework\LTDescrOptional.cs" />
     <Compile Include="Assets\foursoulsauto\ui\CardUI.cs" />
-    <Compile Include="Assets\foursoulsauto\core\SimpleCardAction.cs" />
     <Compile Include="Assets\LeanTween\Examples\Scripts\GeneralUISpace.cs" />
+    <Compile Include="Assets\foursoulsauto\core\deck\Deck.cs" />
     <Compile Include="Assets\LeanTween\Examples\Scripts\GeneralBasic.cs" />
     <Compile Include="Assets\LeanTween\Examples\Scripts\PathSplines.cs" />
     <Reference Include="UnityEngine">
